# llp-lab1

./: CMakeLists.txt  CMakePresets.json  Чернова_ЕА_лаб1_ллп.docx
include/: allocator.h  database.h  database_iterator.h  internals.h  types.h
src/: allocator.c  database.c  database_iterator.c  list.c
test/: benchmark.c  test.c  utils.h
